# Feathr_Technical_Exam_Python

./: .gitignore  NOTES.rst  Procfile  pyproject.toml  requirements.txt  wsgi.py
tests/: test_whoami.py
whoami/: .env  Procfile  app.py
whoami/static/css/: style.css
whoami/static/js/: scripts.js
whoami/templates/: base.html  login.html  me.html  signup.html
whoami/tests/: test_whoami.py
whoami/user/: models.py
